--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@
 body {
   background-color: #f4f6f5;
   overflow: hidden;
-  height: 100vh;
 }
 
 html {
